# Log-hound

./: .gitignore  Cargo.toml  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USAGE.md  USAGE_EXAMPLES.md  engine.py  generate_sample_data.py  ingestor.py  main.py  mapper.py  requirements.txt  rules.yaml  visualizer.py
.github/workflows/: ci.yml
config/: mappings.yaml
crates/loghound-api/: Cargo.toml
crates/loghound-api/src/: dto.rs  error.rs  lib.rs
crates/loghound-api/tests/: api.rs
crates/loghound-cli/: Cargo.toml
crates/loghound-cli/src/: main.rs
crates/loghound-core/: Cargo.toml
crates/loghound-core/src/: edge.rs  event.rs  ids.rs  lib.rs  node.rs  time.rs
crates/loghound-correlate/: Cargo.toml
crates/loghound-correlate/src/: builder.rs  correlator.rs  identity.rs  lib.rs
crates/loghound-correlate/tests/: scenario.rs
crates/loghound-detect/: Cargo.toml
crates/loghound-detect/src/: alerts.rs  dsl.rs  engine.rs  lib.rs  rules.rs  sigma.rs
crates/loghound-graph/: Cargo.toml
crates/loghound-graph/src/: analytics.rs  graph.rs  index.rs  lib.rs  store.rs
crates/loghound-normalize/: Cargo.toml
crates/loghound-normalize/src/: config.rs  lib.rs  normalizer.rs
crates/loghound-parsers/: Cargo.toml
crates/loghound-parsers/src/: lib.rs  oplc.rs  parser.rs  record.rs  timestamp.rs
crates/loghound-parsers/tests/: oplc_sample.rs
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AttackPathView.tsx  DetailPanel.tsx  GraphView.tsx  ProcessTreeView.tsx  SearchPanel.tsx  TimeScrubber.tsx  Toolbar.tsx  ViewTabs.tsx
frontend/src/lib/: cytoStyle.ts  format.ts  kinds.ts  layout.ts  useDebounce.ts
frontend/src/store/: useAppStore.ts
scripts/: gen_sample_logs.py
