[package]
name = "loghound-api"
description = "Axum REST API serving Cytoscape-shaped graph JSON to the frontend."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
loghound-core.workspace = true
loghound-graph.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
loghound-correlate.workspace = true
