[package]
name = "loghound-cli"
description = "LogHound command-line entry point."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "loghound"
path = "src/main.rs"

[dependencies]
loghound-core.workspace = true
loghound-normalize.workspace = true
loghound-detect.workspace = true
loghound-parsers.workspace = true
loghound-graph.workspace = true
loghound-correlate.workspace = true
loghound-api.workspace = true
anyhow.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "net", "time"] }
# M5+ adds: clap
