[package]
name = "loghound-core"
description = "Core domain types for LogHound: temporal nodes/edges, normalized events, ids, time."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
xxhash-rust.workspace = true
thiserror.workspace = true
