[package]
name = "loghound-correlate"
description = "Cross-log correlation: process trees, logon sessions, network/file attribution, lateral movement."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
loghound-core.workspace = true
loghound-graph.workspace = true

[dev-dependencies]
loghound-parsers.workspace = true
loghound-normalize.workspace = true
