[package]
name = "loghound-detect"
description = "Detection engine: loads rules.yaml (atomic/threshold/chain) into a typed rule set."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
loghound-core.workspace = true
loghound-correlate.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
regex.workspace = true
