[package]
name = "loghound-graph"
description = "Temporal graph engine: DuckDB store + in-memory CSR index, traversal, and analytics."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
loghound-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
duckdb = { version = "1", features = ["bundled"] }
arc-swap = "1"
ahash = "0.8"
# M3 adds: petgraph (mutable build graph for streaming correlation)
# M7 adds: rustworkx-core, rayon
