[package]
name = "loghound-normalize"
description = "OCSF normalization: loads mappings.yaml and maps source records to LogHound events."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
loghound-core.workspace = true
loghound-parsers.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
